--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- CSS -->
-		<link rel="stylesheet" type="text/css" href="../css/theStyle.css">
+		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
 		<!-- Javascript -->
-		<script type="text/javascript" src="../js/script.js" ></script>
+		<script type="text/javascript" src="js/script.js" ></script>
 	</head>
 	<body>
 		<div class="row">
