--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
 		<!-- Javascript -->
+		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
 		<script type="text/javascript" src="js/script.js" ></script>
 	</head>
 	<body>
 		<div class="row">
-			<div class="navigation col-12" id="topBar">
+			<div class="navBar col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="images/icons/menu.png" />
-				
+				<ul id="navigation">
+					<li><b><a href="http://www.ign.com">Home</a></b></li>
+					<li><b>Pictures</b></li>
+					<li><b>About</b></li>
+				</ul>
 			</div>
 		</div>
 		<div class="fullscreen" id="page">
