--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<!-- Webpage Title -->
+		<title>Home | Diego Jimenez</title>
+		<!-- Responsive Design -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
@@ -13,20 +16,23 @@
 			<div class="navBar col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="images/icons/menu.png" />
 				<ul id="navigation">
-					<li><b><a href="http://www.ign.com">Home</a></b></li>
+					<li><b><a href="#">Home</a></b></li>
 					<li><b>Pictures</b></li>
 					<li><b>About</b></li>
 				</ul>
 			</div>
 		</div>
-		<div class="fullscreen" id="page">
+
+		<script type="text/javascript">
+			$("#menu").click(ajax_request);
+		</script>
+
+		<!-- <div class="fullscreen" id="page"> -->
 			<div class="row">
-				<div class="col-5"></div>
-				<div class="col-2">
-					<!-- testing -->
-				</div>
-				<div class="col-5"></div>
+				<div class="col-4" id="one">Left</div>
+				<div class="col-4" id="two">Middle</div>
+				<div class="col-4" id="three">Right</div>
 			</div>
-		</div>
+		<!-- </div> -->
 	</body>
 </html>
