removed empty divs

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 		<!-- <div class="fullscreen" id="page"> -->
 			<div class="row">
-				<div class="col-4" id="one">Left</div>
-				<div class="col-4" id="two">Middle</div>
-				<div class="col-4" id="three">Right</div>
+				<!-- <div class="col-4" id="one">Left</div> -->
+				<!-- <div class="col-4" id="two">Middle</div> -->
+				<!-- <div class="col-4" id="three">Right</div> -->
 			</div>
 		<!-- </div> -->
 	</body>
