--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
 		<!-- Javascript -->
-		<script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script>
+		<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> -->
+		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
 		<script type="text/javascript" src="js/script.js" ></script>
 	</head>
 	<body>
