added media page

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<div class="navBar col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="images/icons/menu.png" />
 				<ul id="navigation">
-					<li><b><a href="#">Home</a></b></li>
-					<li><b>Pictures</b></li>
-					<li><b>About</b></li>
+					<li id="home"><b><a href="#">Home</a></b></li>
+					<li id="media"><b><a href="./html/media.html">Media</a></b></li>
+					<li id="about"><b>About</b></li>
 				</ul>
 			</div>
 		</div>
