--- a/html/media.html
+++ b/html/media.html
@@ -28,8 +28,11 @@
 		<!-- <div class="fullscreen" id="page"> -->
 			<div class="row">
 				<div class="col-6 col-m-12">
-					<iframe width="1280" height="720" id="Video_420" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
+					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
 					<!-- <iframe width="auto" height="auto" id="Video_420" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe> -->
+				</div>
+				<div class="col-6 col-m-12">
+					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
 				</div>
 				<!-- <div class="col-4" id="one">Left</div> -->
 				<!-- <div class="col-4" id="two">Middle</div> -->
