added image to media page and changed border

--- a/html/media.html
+++ b/html/media.html
@@ -24,20 +24,18 @@
 				</ul>
 			</div>
 		</div>
-
-		<!-- <div class="fullscreen" id="page"> -->
-			<div class="row">
-				<div class="col-6 col-m-12">
-					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
-					<!-- <iframe width="auto" height="auto" id="Video_420" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe> -->
-				</div>
-				<div class="col-6 col-m-12">
-					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
-				</div>
-				<!-- <div class="col-4" id="one">Left</div> -->
-				<!-- <div class="col-4" id="two">Middle</div> -->
-				<!-- <div class="col-4" id="three">Right</div> -->
+		<div class="row">
+			<div class="col-6 col-m-12">
+				<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
 			</div>
-		<!-- </div> -->
+			<div class="col-6 col-m-12">
+				<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-6 col-m-12">
+				<img class="photo" src='https://lh3.googleusercontent.com/pUx9vaXguaY-7_m31Syqhbo5IC5Rk32mV3TROKrtggr52z8a153SOjpObfz0ZiC6IbP1QtPFsKGoXCzl_nb6c7WLVgRhtWcYl26lhz_yodH3wk7795YkOm24WjzYq7aDZafd' />
+			</div>
+		</div>
 	</body>
 </html>
