added profile picture and removed panoramas

--- a/html/media.html
+++ b/html/media.html
@@ -33,8 +33,28 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-6 col-m-12">
+			<div class="col-4 col-m-6">
+				<!-- West Cliff Lighthouse Sunset -->
 				<img class="photo" src='https://lh3.googleusercontent.com/pUx9vaXguaY-7_m31Syqhbo5IC5Rk32mV3TROKrtggr52z8a153SOjpObfz0ZiC6IbP1QtPFsKGoXCzl_nb6c7WLVgRhtWcYl26lhz_yodH3wk7795YkOm24WjzYq7aDZafd' />
+			</div>
+			<div class="col-4 col-m-6">
+				<!-- Oakland Houses -->
+				<img class="photo" src='https://lh3.googleusercontent.com/cICoCQoia-IGJH-CfrZY1o7nWkMRsoR3_awOK9AeTZ8-TkkGaJDawIr4zo8Q4qy0TOEnQnhGlbgTJQguFV0unfgpLurvjgMVyS8AG7auXXqXxUVcRN5pbpQcPESnvGlXZT2-5w' />
+			</div>
+			<div class="col-4 col-m-6">
+				<!-- Ocean Waves Top -->
+				<img class="photo" src='https://lh3.googleusercontent.com/4O5brjcVzits5ejFQV93Keik1CWkRwdacTiSf0W6Ifl096OdD7ZZs3RFV3EtHmkbdDDOm_kKSZZ4hFOv493bKo7W6sRYveHgL7n8ScfRTvLo1aiqsWEDiMrMmVtCfqkV9IhbJA' />
+			</div>
+			<div class="col-4 col-m-6">
+				<!-- Santa Cruz Boardwalk Round-about -->
+				<img class="photo" src='https://lh3.googleusercontent.com/ZdRbSXN0Jp9h3NWJqMmUbebal4JD-bsRy-Xnn7X6_szYTmpA18NVMPj-nnGxRVuURvOM9kA8TCSkSVXnh4mgOKi3XHCGXB7EfwuNFHvQvDWjK493RlYIqzSM2AHZf-Vv25TQiQ' />
+			</div>
+			<div class="col-4 col-m-6">
+				<!-- West Clif Rock Splash Sunset -->
+				<img class="photo" src='https://lh3.googleusercontent.com/lo0afVEMPm14LlW1_MX5cn0J1fzw8Ie47hnmesQq0mFGivtET2P5tfDJ6bGgSTXm_mRA2uZa3btidqR71uaBJSkDGro-gInHmqaG9P71KT0R0ChfUy9y9Tkc6q8vSlIR39KDFQ' />
+			</div>
+			<div class="col-4 col-m-6">
+				<img class="photo" src='https://lh3.googleusercontent.com/SWcR3NDcYY22I0sbRbLrxIgjcVa_ICddFpEbr7ya5smzaq14VKU3d14uDINW53jYhDepdxNL48yEV7tW2WG8z1mCkUKAxQHDOWsGLzICkBCM3VwILFRGaASy3FlYOwsvG9nBoA' />
 			</div>
 		</div>
 	</body>
