added basic about info

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
+		<link rel="stylesheet" type="text/css" href="css/mediaStyle.css">
 		<!-- Javascript -->
 		<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> -->
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
@@ -26,9 +27,15 @@
 
 		<!-- <div class="fullscreen" id="page"> -->
 			<div class="row">
-				<!-- <div class="col-4" id="one">Left</div> -->
-				<!-- <div class="col-4" id="two">Middle</div> -->
-				<!-- <div class="col-4" id="three">Right</div> -->
+				<div class="col-12 col-m-12">
+					<img class="photo" id="profile" src="images/profile.jpg" />
+				</div>
+				<div class="col-12 col-m-12">
+					<div id="aboutInfo">
+						<i>Student at UCSC<br>
+						BA in Technology & Information Management</i>
+					</div>
+				</div>
 			</div>
 		<!-- </div> -->
 	</body>
