--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				</div>
 				<div class="col-12 col-m-12">
 					<div id="aboutInfo">
-						<i>Student at UCSC<br>
+						<i>Software Engineer at Capital One<br><br>
 						BA in Technology & Information Management</i>
 					</div>
 				</div>
