added margin under navbar

--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
 		</div>
 
 		<!-- <div class="fullscreen" id="page"> -->
-			<div class="row">
+			<div class="row" id="mainContent">
 				<div class="col-12 col-m-12">
 					<img class="photo" id="profile" src="images/profile.jpg" />
 				</div>
 				<div class="col-12 col-m-12">
 					<div id="aboutInfo">
 						<i>Software Engineer at Capital One<br><br>
-						BA in Technology & Information Management</i>
+						BS in Technology & Information Management</i>
 					</div>
 				</div>
 			</div>
