restructured photo layout

--- a/index.html
+++ b/index.html
@@ -27,15 +27,17 @@
 
 		<!-- <div class="fullscreen" id="page"> -->
 			<div class="row" id="mainContent">
-				<div class="col-12 col-m-12">
-					<img class="photo" id="profile" src="images/profile.jpg" />
-				</div>
-				<div class="col-12 col-m-12">
-					<div id="aboutInfo">
-						<i>Software Engineer at Capital One<br><br>
-						BS in Technology & Information Management</i>
+				<!-- <div id="container"> -->
+					<div class="col-12 col-m-12">
+						<img class="photo" id="profile" src="images/profile.jpg" />
 					</div>
-				</div>
+					<div class="col-12 col-m-12">
+						<div id="aboutInfo">
+							<i>Software Engineer at Capital One<br><br>
+							BS in Technology & Information Management</i>
+						</div>
+					</div>
+				<!-- </div> -->
 			</div>
 		<!-- </div> -->
 	</body>
