--- a/html/media.html
+++ b/html/media.html
@@ -26,10 +26,14 @@
 		</div>
 		<div class="row">
 			<div class="col-6 col-m-12">
-				<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
+				<div class="videoDiv">
+					<iframe class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</div>
 			<div class="col-6 col-m-12">
-				<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
+				<div class="videoDiv">
+					<iframe class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
+				</div>
 			</div>
 		</div>
 		<div class="row">
