updated homepage info spacing

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 					</div>
 					<div class="col-12 col-m-12">
 						<div id="aboutInfo">
-							<i>Software Engineer at Capital One<br><br>
+							<i>Software Engineer at Capital One<br>
 							BS in Technology & Information Management</i>
 						</div>
 					</div>
