--- a/html/media.html
+++ b/html/media.html
@@ -27,7 +27,7 @@
 		<div class="row">
 			<div class="col-6 col-m-12">
 				<div class="videoDiv">
-					<iframe class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
+					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 			<div class="col-6 col-m-12">
