removed extra iframe

--- a/html/media.html
+++ b/html/media.html
@@ -32,11 +32,10 @@
 			</div>
 			<div class="col-6 col-m-12">
 				<div class="videoDiv">
-					<iframe class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
+					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
 				</div>
 			</div>
 		</div>
-		<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
 		<div class="row">
 			<div class="photoRow">
 				<div class="col-4 col-m-4">
