added video and photo toggles

--- a/html/media.html
+++ b/html/media.html
@@ -25,6 +25,10 @@
 			</div>
 		</div>
 		<div class="row">
+			<button class="col-6 col-m-6" id="videoToggle">Video</button>
+			<button class="col-6 col-m-6" id="photoToggle">Photo</button>
+		</div>
+		<div class="row videos">
 			<div class="col-6 col-m-6">
 				<div class="videoDiv">
 					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
@@ -36,7 +40,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row photos">
 			<div class="photoRow">
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Lighthouse Sunset -->
