changed video and photo toggles to divs

--- a/html/media.html
+++ b/html/media.html
@@ -25,8 +25,8 @@
 			</div>
 		</div>
 		<div class="row">
-			<button class="col-6 col-m-6" id="videoToggle">Video</button>
-			<button class="col-6 col-m-6" id="photoToggle">Photo</button>
+			<div class="col-6 col-m-6" id="videoToggle">Video</div>
+			<div class="col-6 col-m-6" id="photoToggle">Photo</div>
 		</div>
 		<div class="row videos">
 			<div class="col-6 col-m-6">
