fixed media toggles

--- a/html/media.html
+++ b/html/media.html
@@ -25,8 +25,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-6 col-m-6" id="videoToggle">Video</div>
-			<div class="col-6 col-m-6" id="photoToggle">Photo</div>
+			<div class="col-4 col-m-4 third" id="mediaToggle">All</div>
+			<div class="col-4 col-m-4 third" id="videoToggle">Video</div>
+			<div class="col-4 col-m-4 third" id="photoToggle">Photo</div>
 		</div>
 		<div class="row videos">
 			<div class="col-6 col-m-6">
