changed page max width

--- a/html/media.html
+++ b/html/media.html
@@ -14,8 +14,9 @@
 		<script type="text/javascript" src="../js/script.js" ></script>
 	</head>
 	<body>
+		<div class="navBar"></div>
 		<div class="row">
-			<div class="navBar col-12" id="topBar">
+			<div class="col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="../images/icons/menu.png" />
 				<ul id="navigation">
 					<li id="home"><b><a href="../index.html">Home</a></b></li>
@@ -25,9 +26,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-4 col-m-4 third" id="mediaToggle">All</div>
-			<div class="col-4 col-m-4 third" id="videoToggle">Video</div>
-			<div class="col-4 col-m-4 third" id="photoToggle">Photo</div>
+			<div class="col-4 col-m-4" id="mediaToggle">All</div>
+			<div class="col-4 col-m-4" id="videoToggle">Video</div>
+			<div class="col-4 col-m-4" id="photoToggle">Photo</div>
 		</div>
 		<div class="row videos">
 			<div class="col-6 col-m-6">
@@ -42,7 +43,7 @@
 			</div>
 		</div>
 		<div class="row photos">
-			<div class="photoRow">
+			<div class="col-12 photoRow">
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Lighthouse Sunset -->
 					<img class="photo" src='https://lh3.googleusercontent.com/pUx9vaXguaY-7_m31Syqhbo5IC5Rk32mV3TROKrtggr52z8a153SOjpObfz0ZiC6IbP1QtPFsKGoXCzl_nb6c7WLVgRhtWcYl26lhz_yodH3wk7795YkOm24WjzYq7aDZafd' />
@@ -56,7 +57,7 @@
 					<img class="photo" src='https://lh3.googleusercontent.com/4O5brjcVzits5ejFQV93Keik1CWkRwdacTiSf0W6Ifl096OdD7ZZs3RFV3EtHmkbdDDOm_kKSZZ4hFOv493bKo7W6sRYveHgL7n8ScfRTvLo1aiqsWEDiMrMmVtCfqkV9IhbJA' />
 				</div>
 			</div>
-			<div class="photoRow">
+			<div class="col-12 photoRow">
 				<div class="col-4 col-m-4">
 					<!-- Santa Cruz Boardwalk Round-about -->
 					<img class="photo" src='https://lh3.googleusercontent.com/ZdRbSXN0Jp9h3NWJqMmUbebal4JD-bsRy-Xnn7X6_szYTmpA18NVMPj-nnGxRVuURvOM9kA8TCSkSVXnh4mgOKi3XHCGXB7EfwuNFHvQvDWjK493RlYIqzSM2AHZf-Vv25TQiQ' />
