--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 		<script type="text/javascript" src="js/script.js" ></script>
 	</head>
 	<body>
+		<div class="navBar"></div>
 		<div class="row">
-			<div class="navBar col-12" id="topBar">
+			<div class="col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="images/icons/menu.png" />
 				<ul id="navigation">
 					<li id="home"><b><a href="#">Home</a></b></li>
@@ -24,20 +25,16 @@
 				</ul>
 			</div>
 		</div>
-		<!-- <div class="fullscreen" id="page"> -->
-			<div class="row" id="mainContent">
-				<!-- <div id="container"> -->
-					<div class="col-12 col-m-12">
-						<img class="photo" id="profile" src="images/profile.jpg" />
-					</div>
-					<div class="col-12 col-m-12">
-						<div id="aboutInfo">
-							<i>Software Engineer at Capital One<br>
-							BS in Technology & Information Management</i>
-						</div>
-					</div>
-				<!-- </div> -->
+		<div class="row" id="mainContent">
+			<div class="col-12 col-m-12">
+				<img class="photo" id="profile" src="images/profile.jpg" />
 			</div>
-		<!-- </div> -->
+			<div class="col-12 col-m-12">
+				<div id="aboutInfo">
+					<i>Software Engineer at Capital One<br>
+					BS in Technology & Information Management</i>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
