--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<script type="text/javascript" src="js/script.js" ></script>
 	</head>
 	<body>
-		<div class="navBar"></div>
+		<div class="topBanner"></div>
 		<div class="row">
 			<div class="col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="images/icons/menu.png" />
