--- a/html/media.html
+++ b/html/media.html
@@ -43,6 +43,7 @@
 			</div>
 		</div>
 		<div class="row photos">
+			<!-- ONE -->
 			<div class="col-12 photoRow">
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
@@ -60,23 +61,23 @@
 					<img class="photo" src='https://lh3.googleusercontent.com/4O5brjcVzits5ejFQV93Keik1CWkRwdacTiSf0W6Ifl096OdD7ZZs3RFV3EtHmkbdDDOm_kKSZZ4hFOv493bKo7W6sRYveHgL7n8ScfRTvLo1aiqsWEDiMrMmVtCfqkV9IhbJA' />
 				</div>
 			</div>
+			<!-- TWO -->
 			<div class="col-12 photoRow">
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
-					<!-- West Cliff Rock Splash Sunset -->
-					<img class="photo" src='https://lh3.googleusercontent.com/lo0afVEMPm14LlW1_MX5cn0J1fzw8Ie47hnmesQq0mFGivtET2P5tfDJ6bGgSTXm_mRA2uZa3btidqR71uaBJSkDGro-gInHmqaG9P71KT0R0ChfUy9y9Tkc6q8vSlIR39KDFQ' />
+					<!-- UCSC Forest Bridge -->
+					<img class="photo" src='https://lh3.googleusercontent.com/wPD78jhSix0hNmyMi3oadvTqnaNNrVxjYDyoZqDaRNVkmkQCty_8lo4cWdiHi0Y1DO3RIvMWUt4V_ccPPEVwiYriBGiza8oBkngCpqa8qq1vwUXKBkDHSRSyFaBsmQAtPT5tgQ' />
 				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
-					<!-- West Cliff Sunset -->
-					<img class="photo" src='https://lh3.googleusercontent.com/SWcR3NDcYY22I0sbRbLrxIgjcVa_ICddFpEbr7ya5smzaq14VKU3d14uDINW53jYhDepdxNL48yEV7tW2WG8z1mCkUKAxQHDOWsGLzICkBCM3VwILFRGaASy3FlYOwsvG9nBoA' />
+					<img class="photo" src='https://lh3.googleusercontent.com/yp2vWdHFscaCHj1OpkzPL6Q4pSSYXg9GM2eITz5FkXphWpRLrwJ_8XCBu_LrD1jFlIPu-mxwRmd3SmST73GB7C97Tr1s-mM3s9gR6HDRp232jTIdC0DOoDKRx0-iiIjY6cQkhw' />
 				</div>
 				<!-- 3 -->
 				<div class="col-4 col-m-4">
-					<!-- Natural Bridges Sunset -->
-					<img class="photo" src='https://lh3.googleusercontent.com/T4nTzJvGKnZwRLiOPcDO4-Qjff82vI5jwPqTY5_FYB8uS5Cfk_1dzpeh-XhzuQksyKj8JDZ9RqoNXVZZobUaj8trOAV4wwqmHI0TFpcZcFi8yT-RJND5Hrhb419PNO2EoT8lFA' />
+					<img class="photo" src='https://lh3.googleusercontent.com/nTzfoKoDSf93djPnfqZV_nJIV-aFr1CBAdU--33dUeULEtHHZlPf_okeu-FVrxsV-4p1U1i50ynGH4ta79g7NaPwSgX8BCnyr9uThVRNxwefmnxgtC6gLjWllkQ1FCN1JT53-w' />
 				</div>
 			</div>
+			<!-- THREE -->
 			<div class="col-12 photoRow">
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
@@ -94,6 +95,7 @@
 					<img class="photo" src='https://lh3.googleusercontent.com/ZdRbSXN0Jp9h3NWJqMmUbebal4JD-bsRy-Xnn7X6_szYTmpA18NVMPj-nnGxRVuURvOM9kA8TCSkSVXnh4mgOKi3XHCGXB7EfwuNFHvQvDWjK493RlYIqzSM2AHZf-Vv25TQiQ' />
 				</div>
 			</div>
+			<!-- FOUR -->
 			<div class="col-12 photoRow">
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
@@ -107,28 +109,51 @@
 				</div>
 				<!-- 3 -->
 				<div class="col-4 col-m-4">
-					<!-- Berkeley Marina -->
+					<!-- Berkeley Golden Gate Sunset -->
 					<img class="photo" src='https://lh3.googleusercontent.com/R6WoeUMSxntgRpiVT0LuOqXFJLHPXHutaOErEuFQYkJD7Cvjw-On-mOhZMK-gciRsEAixH7jR-gq6e1kT9xAMDM7zEa3vzYDHtYavumKXIjsweS2IOmcRiwCQF9n090CFd5fWw' />
 				</div>
 			</div>
+			<!-- FIVE -->
 			<div class="col-12 photoRow">
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
-					<img class="photo" src='https://lh3.googleusercontent.com/MUyi7niAcvwBxQCekqo4EYyTqGOKSBaPMZ62H-JDc_mBUj-K59HNIImEeRJawHK3uHM6r5ZCTaSBo5MY5uv6Pm6lVjqFyAynPjNvhDhJOrA8B7Ey_HBYNMgHnjlZbiITtGEc2g' />
+					<!-- West Cliff Rock Splash Sunset -->
+					<img class="photo" src='https://lh3.googleusercontent.com/lo0afVEMPm14LlW1_MX5cn0J1fzw8Ie47hnmesQq0mFGivtET2P5tfDJ6bGgSTXm_mRA2uZa3btidqR71uaBJSkDGro-gInHmqaG9P71KT0R0ChfUy9y9Tkc6q8vSlIR39KDFQ' />
 				</div>
 				<!-- 2 -->
 				<div class="col-4 col-m-4">
-					<img class="photo" src='https://lh3.googleusercontent.com/ngcWsjiB2H1rVvkav89W8qgZVMGZK8Jl1aFqN74KaXPiBafryrRL0f5uRCIH3Cg-2q7ha-H_Sg8DlamLxfISXVTB-X5FMiKka1nCGolQnfmxxQyF4lpmbgT-N4HcQXY1aJ2QIQ' />
+					<!-- West Cliff Sunset -->
+					<img class="photo" src='https://lh3.googleusercontent.com/SWcR3NDcYY22I0sbRbLrxIgjcVa_ICddFpEbr7ya5smzaq14VKU3d14uDINW53jYhDepdxNL48yEV7tW2WG8z1mCkUKAxQHDOWsGLzICkBCM3VwILFRGaASy3FlYOwsvG9nBoA' />
 				</div>
 				<!-- 3 -->
 				<div class="col-4 col-m-4">
-					<img class="photo" src='https://lh3.googleusercontent.com/ZSy_t4g8sF8OKS88mU2FOhe_T7a6dcEBplRfFBeKeVMmi360fpFLi-73cdo2PXNndXLnLc8H5RmlLuPy7i_iXwyuJ7vUvd-ojGcUb-uUj_J0opRcX0bGOLZg16WVi5Wq3Eivfw' />
+					<!-- Natural Bridges Sunset -->
+					<img class="photo" src='https://lh3.googleusercontent.com/T4nTzJvGKnZwRLiOPcDO4-Qjff82vI5jwPqTY5_FYB8uS5Cfk_1dzpeh-XhzuQksyKj8JDZ9RqoNXVZZobUaj8trOAV4wwqmHI0TFpcZcFi8yT-RJND5Hrhb419PNO2EoT8lFA' />
 				</div>
 			</div>
+			<!-- SIX -->
 			<div class="col-12 photoRow">
 				<!-- 1 -->
 				<div class="col-4 col-m-4">
 					<!-- West Cliff Rocks #1 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/MUyi7niAcvwBxQCekqo4EYyTqGOKSBaPMZ62H-JDc_mBUj-K59HNIImEeRJawHK3uHM6r5ZCTaSBo5MY5uv6Pm6lVjqFyAynPjNvhDhJOrA8B7Ey_HBYNMgHnjlZbiITtGEc2g' />
+				</div>
+				<!-- 2 -->
+				<div class="col-4 col-m-4">
+					<!-- West Cliff Rocks #2 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/ngcWsjiB2H1rVvkav89W8qgZVMGZK8Jl1aFqN74KaXPiBafryrRL0f5uRCIH3Cg-2q7ha-H_Sg8DlamLxfISXVTB-X5FMiKka1nCGolQnfmxxQyF4lpmbgT-N4HcQXY1aJ2QIQ' />
+				</div>
+				<!-- 3 -->
+				<div class="col-4 col-m-4">
+					<!-- West Cliff Rocks #3 -->
+					<img class="photo" src='https://lh3.googleusercontent.com/ZSy_t4g8sF8OKS88mU2FOhe_T7a6dcEBplRfFBeKeVMmi360fpFLi-73cdo2PXNndXLnLc8H5RmlLuPy7i_iXwyuJ7vUvd-ojGcUb-uUj_J0opRcX0bGOLZg16WVi5Wq3Eivfw' />
+				</div>
+			</div>
+			<!-- SEVEN -->
+			<div class="col-12 photoRow">
+				<!-- 1 -->
+				<div class="col-4 col-m-4">
+					<!-- West Cliff Rocks #4 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/hsD_0mfFfedquRoH_iRMQDp2H-kzeP2F6e9JM6Mg_NxYNFjWqBdvqQev6zXuml_PevZ1AMIKjl2_NuKACoYPeQvto3J2ssQiZz5gYlVcMV1ujEpzF-WGMGp11dwBy8W2m7HDEw' />
 				</div>
 			</div>
