--- a/html/media.html
+++ b/html/media.html
@@ -156,6 +156,12 @@
 					<!-- West Cliff Rocks #4 -->
 					<img class="photo" src='https://lh3.googleusercontent.com/hsD_0mfFfedquRoH_iRMQDp2H-kzeP2F6e9JM6Mg_NxYNFjWqBdvqQev6zXuml_PevZ1AMIKjl2_NuKACoYPeQvto3J2ssQiZz5gYlVcMV1ujEpzF-WGMGp11dwBy8W2m7HDEw' />
 				</div>
+				<!-- 2 -->
+				<div class="col-4 col-m-4">
+				</div>
+				<!-- 3 -->
+				<div class="col-4 col-m-4">
+				</div>
 			</div>
 		</div>
 	</body>
