--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 			<div class="col-12 col-m-12">
 				<div id="aboutInfo">
 					<i>Software Engineer at Capital One<br>
-					BS in Technology & Information Management</i>
+					BS in Technology & Information Management<br>
+					Minor in Computer Science</i>
 				</div>
 			</div>
 		</div>
