--- a/html/media.html
+++ b/html/media.html
@@ -31,14 +31,16 @@
 			<div class="col-4 col-m-4" id="photoToggle">Photo</div>
 		</div>
 		<div class="row videos">
-			<div class="col-6 col-m-6">
-				<div class="videoDiv">
-					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
+			<div class="col-12 videoRow">
+				<div class="col-6 col-m-6">
+					<div class="videoDiv">
+						<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
+					</div>
 				</div>
-			</div>
-			<div class="col-6 col-m-6">
-				<div class="videoDiv">
-					<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
+				<div class="col-6 col-m-6">
+					<div class="videoDiv">
+						<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
+					</div>
 				</div>
 			</div>
 		</div>
