changed button layout

--- a/html/media.html
+++ b/html/media.html
@@ -26,9 +26,11 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-4 col-m-4" id="mediaToggle">All</div>
-			<div class="col-4 col-m-4" id="videoToggle">Video</div>
-			<div class="col-4 col-m-4" id="photoToggle">Photo</div>
+			<div class="col-12 buttonRow">
+				<div class="col-4 col-m-4" id="mediaToggle">All</div>
+				<div class="col-4 col-m-4" id="videoToggle">Video</div>
+				<div class="col-4 col-m-4" id="photoToggle">Photo</div>
+			</div>
 		</div>
 		<div class="row videos">
 			<div class="col-12 videoRow">
