added blank about page and /normalize.css

--- a/html/media.html
+++ b/html/media.html
@@ -21,12 +21,15 @@
 				<ul id="navigation">
 					<li id="home"><b><a href="../index.html">Home</a></b></li>
 					<li id="media"><b><a href="#">Media</a></b></li>
-					<li id="about"><b>About</b></li>
+					<li id="about"><b><a href="./html/about.html">About</a></b></li>
 				</ul>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-12 buttonRow">
+				<!-- <input type="button" name="All" value="All" class="col-4 col-m-4 mediaButton">
+				<input type="button" name="Video" value="Video" class="col-4 col-m-4 mediaButton">
+				<input type="button" name="Photo" value="Photo" class="col-4 col-m-4 mediaButton"> -->
 				<div class="col-4 col-m-4" id="mediaToggle">All</div>
 				<div class="col-4 col-m-4" id="videoToggle">Video</div>
 				<div class="col-4 col-m-4" id="photoToggle">Photo</div>
