--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<!-- Responsive Design -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<!-- CSS -->
+		<link href="/normalize.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
 		<link rel="stylesheet" type="text/css" href="css/mediaStyle.css">
 		<!-- Javascript -->
@@ -21,7 +22,7 @@
 				<ul id="navigation">
 					<li id="home"><b><a href="#">Home</a></b></li>
 					<li id="media"><b><a href="./html/media.html">Media</a></b></li>
-					<li id="about"><b>About</b></li>
+					<li id="about"><b><a href="./html/about.html">About</a></b></li>
 				</ul>
 			</div>
 		</div>
