--- a/html/media.html
+++ b/html/media.html
@@ -47,6 +47,11 @@
 						<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/i7OJCOF_m1g" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
+				<div class="col-6 col-m-6">
+					<div class="videoDiv">
+						<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/pgbUJE_-wWo" frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="row photos">
