added projects page

--- a/index.html
+++ b/index.html
@@ -16,16 +16,17 @@
 	</head>
 	<body>
 		<div class="topBanner"></div>
-		<div class="row">
+		<nav class="row">
 			<div class="col-12" id="topBar">
 				<img class="menuIcon" id="menu" src="images/icons/menu.png" />
 				<ul id="navigation">
 					<li id="home"><b><a href="#">Home</a></b></li>
 					<li id="media"><b><a href="./html/media.html">Media</a></b></li>
+					<li id="projects"><b><a href="./html/projects.html">Projects</a></b></li>
 					<li id="about"><b><a href="./html/about.html">About</a></b></li>
 				</ul>
 			</div>
-		</div>
+		</nav>
 		<div class="row" id="mainContent">
 			<div class="col-12 col-m-12">
 				<img class="photo" id="profile" src="images/profile.jpg" />
