--- a/html/about.html
+++ b/html/about.html
@@ -20,7 +20,8 @@
 				<img class="menuIcon" id="menu" src="../images/icons/menu.png" />
 				<ul id="navigation">
 					<li id="home"><b><a href="../index.html">Home</a></b></li>
-					<li id="media"><b><a href="./html/media.html">Media</a></b></li>
+					<li id="media"><b><a href="./media.html">Media</a></b></li>
+					<li id="projects"><b><a href="./projects.html">Projects</a></b></li>
 					<li id="about"><b>About</b></li>
 				</ul>
 			</div>
