--- a/html/media.html
+++ b/html/media.html
@@ -21,7 +21,8 @@
 				<ul id="navigation">
 					<li id="home"><b><a href="../index.html">Home</a></b></li>
 					<li id="media"><b><a href="#">Media</a></b></li>
-					<li id="about"><b><a href="./html/about.html">About</a></b></li>
+					<li id="projects"><b><a href="./projects.html">Projects</a></b></li>
+					<li id="about"><b><a href="./about.html">About</a></b></li>
 				</ul>
 			</div>
 		</div>
