--- a/html/projects.html
+++ b/html/projects.html
@@ -5,6 +5,20 @@
 		<title>Projects | Diego Jimenez</title>
 		<!-- Responsive Design -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<!-- polyfill -->
+	    <script src="../audio_plugin/inc/shim/Base64.js" type="text/javascript"></script>
+		<script src="../audio_plugin/inc/shim/Base64binary.js" type="text/javascript"></script>
+		<script src="../audio_plugin/inc/shim/WebAudioAPI.js" type="text/javascript"></script>
+		<!-- midi.js package -->
+		<script src="../audio_plugin/midi/audioDetect.js" type="text/javascript"></script>
+		<script src="../audio_plugin/midi/gm.js"></script>
+		<script src="../audio_plugin/midi/loader.js" type="text/javascript"></script>
+		<script src="../audio_plugin/midi/plugin.audiotag.js" type="text/javascript"></script>
+		<script src="../audio_plugin/midi/plugin.webaudio.js" type="text/javascript"></script>
+		<script src="../audio_plugin/midi/plugin.webmidi.js" type="text/javascript"></script>
+		<!-- utils -->
+		<script src="../audio_plugin/util/dom_request_xhr.js" type="text/javascript"></script>
+		<script src="../audio_plugin/util/dom_request_script.js" type="text/javascript"></script>
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="../css/theStyle.css">
 		<link rel="stylesheet" type="text/css" href="../css/mediaStyle.css">
