modified photo navigation buttons

--- a/html/media.html
+++ b/html/media.html
@@ -181,9 +181,9 @@
 		<div class="viewer viewer-m">
 			<div class="photoViewerBox">
 				<div class="navButtons">
-					<button class="previous navButton"><</button>
+					<button class="previous navButton"></button>
 					<button class="close navButton">X</button>
-					<button class="next navButton">></button>
+					<button class="next navButton"></button>
 				</div>
 				<div class="photoSlide">
 					<!-- West Cliff Lighthouse Sunset -->
