--- a/html/media.html
+++ b/html/media.html
@@ -179,10 +179,11 @@
 			</div>
 		</div>
 		<div class="viewer viewer-m">
+			<div class="close">close</div>
 			<div class="photoViewerBox">
 				<div class="navButtons">
 					<button class="previous navButton"></button>
-					<button class="close navButton">X</button>
+					<!-- <button class="close navButton">X</button> -->
 					<button class="next navButton"></button>
 				</div>
 				<div class="photoSlide">
