modified photo navigation and changed global font

--- a/html/media.html
+++ b/html/media.html
@@ -8,6 +8,8 @@
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="../css/theStyle.css">
 		<link rel="stylesheet" type="text/css" href="../css/mediaStyle.css">
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<!-- Javascript -->
 		<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> -->
 		<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
@@ -29,9 +31,6 @@
 		</div>
 		<div class="row">
 			<div class="col-12 buttonRow">
-				<!-- <input type="button" name="All" value="All" class="col-4 col-m-4 mediaButton">
-				<input type="button" name="Video" value="Video" class="col-4 col-m-4 mediaButton">
-				<input type="button" name="Photo" value="Photo" class="col-4 col-m-4 mediaButton"> -->
 				<div class="col-4 col-m-4" id="mediaToggle">All</div>
 				<div class="col-4 col-m-4" id="videoToggle">Video</div>
 				<div class="col-4 col-m-4" id="photoToggle">Photo</div>
@@ -182,9 +181,8 @@
 			<div class="close">close</div>
 			<div class="photoViewerBox">
 				<div class="navButtons">
-					<button class="previous navButton"></button>
-					<!-- <button class="close navButton">X</button> -->
-					<button class="next navButton"></button>
+					<button class="previous navButton"><</button>
+					<button class="next navButton">></button>
 				</div>
 				<div class="photoSlide">
 					<!-- West Cliff Lighthouse Sunset -->
