--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 		<link href="/normalize.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
 		<link rel="stylesheet" type="text/css" href="css/mediaStyle.css">
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<!-- Javascript -->
 		<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> -->
 		<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
