added basic info to about page

--- a/html/about.html
+++ b/html/about.html
@@ -8,6 +8,9 @@
 		<!-- CSS -->
 		<link rel="stylesheet" type="text/css" href="../css/theStyle.css">
 		<link rel="stylesheet" type="text/css" href="../css/mediaStyle.css">
+		<link rel="stylesheet" type="text/css" href="../css/aboutStyle.css">
+		<!-- Fonts -->
+		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 		<!-- Javascript -->
 		<!-- <script type="text/javascript" src="http://code.jquery.com/jquery-latest.min.js"></script> -->
 		<script type="text/javascript" src="../js/jquery-3.2.1.min.js"></script>
@@ -27,7 +30,17 @@
 			</div>
 		</div>
 		<div class="row">
-			About
+			<div class="col-6 col-m-6">
+				<img class="photo" id="aboutPhoto" src="../images/profile.jpg" />
+			</div>
+			<div class="col-6 col-m-6">
+				<p id="personalInfo">Name: Diego Jimenez<br/><br/>
+				Hometown: Santa Cruz, CA<br/><br/>
+				Degree: BS in Technology & Information Management<br/><br/>
+				Instagram: <a href="https://www.instagram.com/diego_jimenez_photography"> diego_jimenez_photography</a><br/><br/>
+				Contact: diegojimenez1023@gmail.com<br/>
+				</p>
+			</div>
 		</div>
 	</body>
 </html>
