--- a/html/projects.html
+++ b/html/projects.html
@@ -46,6 +46,7 @@
 		<div class="row">
 			<div class="col-12 showcase">
 				<h1>Music Theory Keyboard</h1>
+				<div class="container">
 				<div id="keyboard">
 					<!-- keyboard keys that call functions to play corresponding note when clicked --><!--
 					--><div class="key lStraightKey" id="c3Key" onclick="contextualClick('c', 3, this.id)"><div class="hardwareName">q</div><div class="keyName">C</div></div><!--
@@ -77,6 +78,7 @@
 					--><div class="key cutKey" id="d5Key" onclick="contextualClick('d', 5, this.id)"><div class="hardwareName">n</div><div class="keyName">D</div></div><!--
 					--><div class="key blackKey" id="eb5Key" onclick="contextualClick('eb', 5, this.id)"><div class="hardwareName">j</div><div class="keyName">D<sup>#</sup> E<sup>b</sup></div></div><!--
 					--><div class="key rStraightKey" id="e5Key" onclick="contextualClick('e', 5, this.id)"><div class="hardwareName">m</div><div class="keyName">E</div></div>
+				</div>
 				</div>
 			</div>
 		</div>
