--- a/html/media.html
+++ b/html/media.html
@@ -40,6 +40,11 @@
 			<div class="col-12 videoRow">
 				<div class="col-6 col-m-6">
 					<div class="videoDiv">
+						<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/k_39SWLel5M" frameborder="0" allowfullscreen frameborder="0" allowfullscreen></iframe>
+					</div>
+				</div>
+				<div class="col-6 col-m-6">
+					<div class="videoDiv">
 						<iframe width="1280" height="720" class="video" src="https://www.youtube.com/embed/0cLktrEMZ3k" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
