--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Webpage Title -->
 		<title>Home | Diego Jimenez</title>
 		<!-- Responsive Design -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=0">
 		<!-- CSS -->
 		<link href="/normalize.css" rel="stylesheet">
 		<link rel="stylesheet" type="text/css" href="css/theStyle.css">
