--- a/html/projects.html
+++ b/html/projects.html
@@ -4,7 +4,7 @@
 		<!-- Webpage Title -->
 		<title>Projects | Diego Jimenez</title>
 		<!-- Responsive Design -->
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0 maximum-scale=1, user-scalable=0">
 		<!-- polyfill -->
 	    <script src="../audio_plugin/inc/shim/Base64.js" type="text/javascript"></script>
 		<script src="../audio_plugin/inc/shim/Base64binary.js" type="text/javascript"></script>
